<resources>
    <string name="app_name">Android Developer Fundamentals</string>
    <string name="text1view">This is an orange TextView</string>
    <string name="text2view">This is a green TextView!</string>
    <string name="text3view">This is a \n blue TextView!</string>
    <string name="button1">This is a BUTTON</string>
    <string name="button2">This is a green BUTTON</string>
    <string name="Edittext1">This is an EditText</string>
    <string name="Edittext2">This is a new EditText</string>
    <string name="Checkbox1">Notify me :)</string>
    <string name="Switch1">Auto backup</string>
    <string name="RadioButton1">Yes</string>
    <string name="RadioButton2">No</string>
    <string name="TextLoginview">LOGIN</string>
    <string name="EdittextEmail">Email</string>
    <string name="EdittextPhone">Phone</string>
    <string name="CheckboxIacc"><![CDATA[I accept T&C]]></string>
    <string name="button3">SUBMIT</string>
    <string name="spinner_example">SpinnerEX</string>
    <string name="Letitsnowbutt">Let it snow</string>
    <string name="Ginglesbellsbutt">Gingles bells</string>
    <string name="happyholid_text">Happy holidays</string>
</resources>
