<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="week4.ChristmasActivity">

    <ImageView
        android:id="@+id/christmas_image"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_256"
        android:layout_marginBottom="8dp"
        android:src="@drawable/header_image"
        app:layout_constrainedHeight="true" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-1dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/space_128"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/poster_sparkling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf=""
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintVertical_bias="0.528" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="409dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="143dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorAccent"
        android:text="@string/Letitsnowbutt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.56" />

    <Button
        android:id="@+id/button4"
        android:layout_width="134dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:text="@string/Ginglesbellsbutt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.481" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="184dp"
        android:layout_height="73dp"
        android:text="@string/happyholid_text"
        tools:layout_editor_absoluteX="117dp"
        tools:layout_editor_absoluteY="256dp"
       />

</android.support.constraint.ConstraintLayout>